--- a/Healthy/tinnitus.org
+++ b/Healthy/tinnitus.org
@@ -1,3 +1,4 @@
+#+HTML_HEAD_EXTRA: <style>body {background: rgb(193, 230, 198) !important;}</style>
 #+OPTIONS: \n:t toc:nil num:nil html-postamble:nil
 * 耳鸣最佳的自愈方法——学会让你的中枢神经系统放松
 
@@ -45,3 +46,13 @@
 7. *耳鸣是可以完全恢复的，完全恢复的定义是：在安静的地方也听不到任何声音！不用去纠结这是物理上的恢复还是心理上的恢复。*
 
 希望大家加油！
+* Tinnitus from youtube
+诀窍就是去听声音.一旦你有足够的勇气,让自己去听它.
+你越不想去听到它,但诀窍就是让自己去听它,但是不要精神恐慌.
+当你的身体意识到这个声音不是危险的,当你开始放松,接下来慢慢地你的恐慌~和压力开始下降,你就越能放松地接受它(但不是马上).
+后面就算你听到它了,你也比较能接受它了,然后就开始放松.
+这样形成一个越听越放松,越放松越能接受它的这样机制.
+大概几个礼拜,就会开始生效~产生变化.
+
+我自己几周后发现一次比一次安静,几个月后几乎全好了.
+它停下来,又开始了.然后又停掉,又出现...最后就消失了.
